p3/manifests/ingress/iot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-one
            port:
              name: iot-svc-port
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-two
            port:
              name: iot-svc-port
  - host: app3.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-three
            port:
              name: iot-svc-port
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iot-app
            port:
              name: iot-svc-port
